# jemalloc-ssce

./: .appveyor.yml  .gitignore  CMakeLists.txt  Utilities.cmake  build.py  configure.ac  windows.py
build-aux/: DetectCompilerFeatures.cmake  DetectOSFeatures.cmake
include/jemalloc/: jemalloc_protos.h.in
include/jemalloc/internal/: jemalloc_internal_decls.h  private_symbols.py  test_hooks.h
src/: CMakeLists.txt  jemalloc.c  test_hooks.c
